--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-         <!-- Required meta tags always come first -->
+    <!-- Required meta tags always come first -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
@@ -19,21 +19,26 @@
 </head>
 
 <body>
-    <!-- responsive navbar, images added -->
+    <!-- Responsive navbar, labels added -->
     <header class="jumbotron jumbotron-fluid">
         <div class="container">
             <div class="row">
-                <div class="col-4 col-sm-3 col-md-2 align-self-center">
+                <div class="col-4 col-sm-3 col-md-2 align-items-center">
                     <img src="img/logo.png" class="img-fluid" alt="">
                 </div>
                 <div class="col">
                     <h1>NuCamp</h1>
                     <h2>a better way to camp</h2>
                 </div>
+    <!-- Reserve campsite button in jumbotron. -->
+                <div class="col-md-4 col-xl-2 col-xs-12">
+                    <a class="btn btn-info btn-lg mt-4" href="#reservation" role="button">Reserve Campsite</a>
+                </div>
             </div>
         </div>
     </header>
     
+    <!-- Logos added to navbar, sticky top and icon pack from font awesome. -->
     <nav class="navbar navbar-expand-sm navbar-dark sticky-top">
         <div class="container">
             <a class="navbar-brand" href="#"><img src="img/logo.png" height="30" width="30" /></a>
@@ -65,18 +70,25 @@
                     </div>
                 </div>
             </div>
+    <!-- this last div was giving me a headache for about a day but was the the last step before submission on 9/8/2020. -->
+        </div>
 
         <div class="row row-content align-items-center">
             <div class="col-sm-4 col-md-3">
                 <h2>Featured Campsites</h2>
             </div>
             <div class="col">
-                <h3>React Lake Campground</h3>
-        		<p class="d-none d-sm-block">Nestled in the foothills of the Chrome Mountains, this campground on the shores of the pristine React Lake is a favorite for fly fishers.</p>
+                <div class="media">
+                    <div class="media-body align-self-center">
+                        <h3>React Lake Campground</h3>                
+                            <p class="d-none d-sm-block">Nestled in the foothills of the Chrome Mountains, this campground on the shores of the pristine React Lake is a favorite for fly fishers.</p>
+                    </div>
+                        <img class="d-flex ml-3 img-thumbnail" src="img/react-lake-thumb.jpg" alt="Picture of React Lake" />
+                </div>
    			</div>
-        </div>
+        </div>        
 
-        <div class="row">
+        <div class="row row-content align-items-center">
             <div class="col-sm-4 order-sm-last col-md-3">
                 <h2 class="text-sm-right">Our Community Partners</h2>
             </div>
@@ -86,6 +98,48 @@
                         <div class="media-body align-self-center">
                             <h3>Bootstrap Outfitters</h3>
                             <p class="d-none d-sm-block">Bootstrap Outfitters supplies you with gear you need at prices you can't beat.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+    <!-- Reservation form, number of campers and date selectors -->
+            <div id="reservation" class="row-content align-items-center">
+                <div class="col-sm-6 mx-auto">
+                    <div class="card">
+                        <h3 class="card-header bg-info text-white">Reserve a Campsite</h3>
+                        <div class="card-body">
+                            <form id="reserveForm">
+                                <div class="form-group row">
+                                    <div class="col-sm-6">
+                                        <label for="numCampers" class="col-form-label">Number of Campers</label>
+                                    </div>
+                                    <div class="col">
+                                        <select class="form-control" name="numCampers" id="numCampers">
+                                            <option selected>Select...</option>
+                                            <option value="1">1</option>
+                                            <option value="2">2</option>
+                                            <option value="3">3</option>
+                                            <option value="4">4</option>
+                                            <option value="5">5</option>
+                                            <option value="6">6</option>
+                                        </select>
+                                    </div>
+                                </div>
+                                <div class="form-group row">
+                                    <div class="col-sm-6">
+                                        <label for="date" class="col-form-label">Date</label>
+                                    </div>
+                                    <div class="col">
+                                        <input type="date" class="form-control" id="date" name="date" placeholder="date">
+                                    </div>
+                                </div>
+                                <div class="form-group row">
+                                    <div class="col">
+                                        <button type="submit" class="btn btn-primary">Search</button>
+                                    </div>
+                                </div>
+                            </form> 
                         </div>
                     </div>
                 </div>
@@ -104,6 +158,7 @@
                         <li><a href="contactus.html">Contact</a></li>
                     </ul>
                 </div>
+    <!-- social tags, svg's from font awesome. -->
                     <div class="col-6 col-sm-5 text-center">
                         <h5>Social</h5>
                         <a class="btn btn-social-icon btn-instagram" href="http://instagram.com/"><i class="fa fa-instagram"></i></a>
