--- a/index.html
+++ b/index.html
@@ -30,9 +30,10 @@
                     <h1>NuCamp</h1>
                     <h2>a better way to camp</h2>
                 </div>
-    <!-- Reserve campsite button in jumbotron. -->
+    
+                <!-- Reserve campsite button in jumbotron. -->
                 <div class="col-md-4 col-xl-2 col-xs-12">
-                    <a class="btn btn-info btn-lg mt-4" href="#reservation" role="button">Reserve Campsite</a>
+                    <a class="btn btn-info btn-lg mt-4" href="#reservation" role="button" data-toggle="tooltip" data-placement="bottom" data-html="true" title="Or call us at <br /><strong> 1-206-555-1234</strong>">Reserve Campsite</a>
                 </div>
             </div>
         </div>
@@ -179,6 +180,11 @@
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 
+    <script>
+        $(function (){
+            $('[data-toggle="tooltip"]').tooltip()
+        })
+    </script>
 </body>
 
 </html>
