--- a/index.html
+++ b/index.html
@@ -3,13 +3,16 @@
 
 <head>
     <!-- Required meta tags always come first -->
+
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- Bootstrap CSS -->
+
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
 
     <!-- Additional CSS must be placed after Bootstrap CSS -->
+
     <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css" />
     <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster|Open+Sans" />
@@ -20,6 +23,7 @@
 
 <body>
     <!-- Responsive navbar, labels added -->
+
     <header class="jumbotron jumbotron-fluid">
         <div class="container">
             <div class="row">
@@ -31,15 +35,76 @@
                     <h2>a better way to camp</h2>
                 </div>
     
-                <!-- Reserve campsite button in jumbotron, tooltip enabled. -->
+    <!-- Reserve campsite button in jumbotron, tooltip enabled. -->
+
                 <div class="col-md-4 col-xl-2 col-xs-12">
-                    <a class="btn btn-info btn-lg mt-4" href="#reservation" role="button" data-toggle="tooltip" data-placement="bottom" data-html="true" title="Or call us at <br /><strong> 1-206-555-1234</strong>">Reserve Campsite</a>
+                    <a class="btn btn-info btn-lg mt-4" role="button" data-toggle="modal" data-target="#reserveModal">Reserve Campsite</a>
                 </div>
             </div>
         </div>
     </header>
-    
+
+    <!-- Reserve campsite button modal -->
+
+    <div id="reserveModal" class="modal fade">
+        <div class="modal-dialog modal-lg" role="document">
+            <div class="modal-content">
+                <div class="modal-header bg-info">
+                    <h3 class="modal-title bg-info text-white">Reserve a Campsite</h3>
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                </div>
+                <div class="modal-body">
+                    <form id="reserveForm">
+                        <div class="form-group row">
+                            <div class="col-sm-6">
+                                <label for="numCampers" class="col-form-label">Number of Campers</label>
+                            </div>
+                            <div class="col">
+                                <select class="form-control" name="numCampers" id="numCampers">
+                                    <option selected>Select...</option>
+                                    <option value="1">1</option>
+                                    <option value="2">2</option>
+                                    <option value="3">3</option>
+                                    <option value="4">4</option>
+                                    <option value="5">5</option>
+                                    <option value="6">6</option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <div class="col-sm-6">
+                                <label for="date" class="col-form-label">Date</label>
+                            </div>
+                            <div class="col">
+                                <input type="date" class="form-control" id="date" name="date" placeholder="date">
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label class="col-sm-6 col-form-label" for="">Campsite Type</label>
+                                <div class="col-2 btn-group btn-group-toggle" data-toggle="buttons">
+                                    <label class="btn btn-success active">
+                                        <input type="radio" name="siteType" id="siteTent" value="tent" autocomplete="off" checked> Tent
+                                    </label>
+                                    <label class="btn btn-primary">
+                                        <input type="radio" name="siteType" id="siteRV" value="RV" autocomplete="off"> RV
+                                    </label>
+                                </div>
+                            </label>
+                        </div>
+                        <div class="form-group row">
+                            <div class="col">
+                                <button type="cancel" class="btn btn-secondary">Cancel</button>
+                                <button type="submit" class="btn btn-primary">Search</button>                                
+                            </div>
+                        </div>                        
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!-- Logos added to navbar, sticky top and icon pack from font awesome. -->
+
     <nav class="navbar navbar-expand-sm navbar-dark sticky-top">
         <div class="container">
             <a class="navbar-brand" href="#"><img src="img/logo.png" height="30" width="30" /></a>
@@ -62,7 +127,8 @@
             </div>
         </nav>
 
-        <!-- Login modal with fade effect. -->
+    <!-- Login modal with fade effect. -->
+
         <div id="loginModal" class="modal fade" role="dialog">
             <div class="modal-dialog" role="document">
                 <div class="modal-content">
@@ -101,6 +167,23 @@
         </div>
 
     <div class="container">
+        <div class="row row-content">
+            <div class="col-md-8 mx-auto">
+                <div id="homeCarousel" class="carousel slid" data-ride="carousel">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img class="d-block w-100" src="img/breadcrumb-trail.jpg" alt="Breadcrumb Trail Campground" />
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="img/react-lake.jpg" alt="React Lake Campground" />
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="img/chrome-river.jpg" alt="Chrome River Campground" />
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
         <div class="row row-content align-items-center">
             <div class="col-sm-4 order-sm-last col-md-3">
                 <h2 class="text-sm-right">Discover & Review</h2>
@@ -148,6 +231,7 @@
             </div>
 
     <!-- Reservation form, number of campers and date selectors -->
+
             <div id="reservation" class="row-content align-items-center">
                 <div class="col-sm-6 mx-auto">
                     <div class="card">
@@ -202,7 +286,9 @@
                         <li><a href="contactus.html">Contact</a></li>
                     </ul>
                 </div>
+
     <!-- social tags, svg's from font awesome. -->
+
                     <div class="col-6 col-sm-5 text-center">
                         <h5>Social</h5>
                         <a class="btn btn-social-icon btn-instagram" href="http://instagram.com/"><i class="fa fa-instagram"></i></a>
@@ -219,14 +305,12 @@
     </footer>
 
     <!-- jQuery must come first, then Popper.js, then the Bootstrap JavaScript plugins.-->
+
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-
     <script>
-        $(function (){
-            $('[data-toggle="tooltip"]').tooltip()
-        })
+        $("#reserveModal").modal[options];
     </script>
 </body>
 
