--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </head>
 
 <body>
-    <!-- Responsive navbar, labels added -->
+    <!-- Jumbotron -->
 
     <header class="jumbotron jumbotron-fluid">
         <div class="container">
@@ -35,7 +35,7 @@
                     <h2>a better way to camp</h2>
                 </div>
     
-    <!-- Reserve campsite button in jumbotron, tooltip enabled. -->
+    <!-- Reserve Button. -->
 
                 <div class="col-md-4 col-xl-2 col-xs-12">
                     <a class="btn btn-info btn-lg mt-4" role="button" data-toggle="modal" data-target="#reserveModal">Reserve Campsite</a>
@@ -44,7 +44,7 @@
         </div>
     </header>
 
-    <!-- Reserve campsite button modal -->
+    <!-- Reserve Modal -->
 
     <div id="reserveModal" class="modal fade">
         <div class="modal-dialog modal-lg" role="document">
@@ -103,7 +103,7 @@
         </div>
     </div>
 
-    <!-- Logos added to navbar, sticky top and icon pack from font awesome. -->
+    <!-- Navbar. -->
 
     <nav class="navbar navbar-expand-sm navbar-dark sticky-top">
         <div class="container">
@@ -127,7 +127,7 @@
             </div>
         </nav>
 
-    <!-- Login modal with fade effect. -->
+    <!-- Login Modal. -->
 
         <div id="loginModal" class="modal fade" role="dialog">
             <div class="modal-dialog" role="document">
@@ -166,24 +166,58 @@
             </div>
         </div>
 
+    <!-- Carousel -->
+
     <div class="container">
         <div class="row row-content">
             <div class="col-md-8 mx-auto">
-                <div id="homeCarousel" class="carousel slid" data-ride="carousel">
+                <div id="homeCarousel" class="carousel slide" data-ride="carousel">
+
+    <!-- Indicators -->
+
+                    <ol class="carousel-indicators">
+                        <li data-target="#homeCarousel" data-slide-to="0" class="active"> </li>
+                        <li data-target="#homeCarousel" data-slide-to="1"> </li>
+                        <li data-target="#homeCarousel" data-slide-to="2"> </li>
+                    </ol>
+
                     <div class="carousel-inner">
                         <div class="carousel-item active">
                             <img class="d-block w-100" src="img/breadcrumb-trail.jpg" alt="Breadcrumb Trail Campground" />
+                            <div class="carousel-caption">
+                                <h3>Breadcrumb Trail Campground</h3>
+                                <p class="d-none d-sm-block">Let Nucamp be your guide to this off-the-beaten-path, hike-in-only campground.</p>
+                            </div>
                         </div>
                         <div class="carousel-item">
                             <img class="d-block w-100" src="img/react-lake.jpg" alt="React Lake Campground" />
+                            <div class="carousel-caption">
+                                <h3>React Lake Campground</h3>
+                                <p class="d-none d-sm-block">Nestled in the foothills of the Chrome Mountains, this campground on the shores of the pristine React Lake is a favorite for the fly fishers.</p>
+                            </div>
                         </div>
                         <div class="carousel-item">
                             <img class="d-block w-100" src="img/chrome-river.jpg" alt="Chrome River Campground" />
+                            <div class="carousel-caption">
+                                <h3>Chrome River Campground</h3>
+                                <p class="d-none d-sm-block">Spend a few sunny days and starryt night beneath a canopy of old-growth firs at this enchanting spot by the Chrome River.</p>
+                            </div>
                         </div>
                     </div>
+                    <a class="carousel-control-prev" href="#homeCarousel" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" ></span>
+                        <span class="sr-only">Previous </span>
+                    </a>
+                    <a class="carousel-control-next" href="#homeCarousel" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon"> </span>
+                        <span class="sr-only">Next </span>
+                    </a>
                 </div>
             </div>
         </div>
+
+    <!-- Body Content -->
+
         <div class="row row-content align-items-center">
             <div class="col-sm-4 order-sm-last col-md-3">
                 <h2 class="text-sm-right">Discover & Review</h2>
@@ -197,7 +231,6 @@
                     </div>
                 </div>
             </div>
-    <!-- this last div was giving me a headache for about a day but was the the last step before submission on 9/8/2020. -->
         </div>
 
         <div class="row row-content align-items-center">
@@ -230,7 +263,7 @@
                 </div>
             </div>
 
-    <!-- Reservation form, number of campers and date selectors -->
+    <!--Reservation Form -->
 
             <div id="reservation" class="row-content align-items-center">
                 <div class="col-sm-6 mx-auto">
@@ -287,7 +320,7 @@
                     </ul>
                 </div>
 
-    <!-- social tags, svg's from font awesome. -->
+    <!-- Social Tags -->
 
                     <div class="col-6 col-sm-5 text-center">
                         <h5>Social</h5>
