--- a/aboutus.html
+++ b/aboutus.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <!-- responsive navbar, images added -->
+    <!-- Navbar -->
     <header class="jumbotron jumbotron-fluid">
         <div class="container">
             <div class="row">
@@ -34,17 +34,17 @@
             <a class="navbar-brand" href="index.html"><img src="img/logo.png" height="30" width="30" /></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nucampNavbar">
                 <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="nucampNavbar">
-                    <ul class="navbar-nav">
-                        <li class="nav-item"><a class="nav-link" href="index.html"><i class="fa fa-home fa-lg"></i> Home</a></li>
-                        <li class="nav-item active"><a class="nav-link" href="#"><i class="fa fa-info fa-lg"></i> About</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#"><i class="fa fa-list fa-lg"></i> Sites</a></li>
-                        <li class="nav-item"><a class="nav-link" href="contactus.html"><i class="fa fa-address-card fa-lg"></i> Contact</a></li>
-                    </ul>
-                </div>
+            </button>
+            <div class="collapse navbar-collapse" id="nucampNavbar">
+                <ul class="navbar-nav">
+                    <li class="nav-item"><a class="nav-link" href="index.html"><i class="fa fa-home fa-lg"></i> Home</a></li>
+                    <li class="nav-item active"><a class="nav-link" href="#"><i class="fa fa-info fa-lg"></i> About</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#"><i class="fa fa-list fa-lg"></i> Sites</a></li>
+                    <li class="nav-item"><a class="nav-link" href="contactus.html"><i class="fa fa-address-card fa-lg"></i> Contact</a></li>
+                </ul>
             </div>
-        </nav>
+        </div>
+    </nav>
 
     <div class="container">
         <div class="row">
@@ -101,9 +101,7 @@
                     <div class="card">
                         <div role="tab" class="card-header">
                             <h4>
-                                <a data-toggle="collapse" data-target="#bootstrap">
-                                    Bootstrap Outfitters <small>Outdoor Gear Specialists</small>
-                                </a>
+                                <a data-toggle="collapse" data-target="#bootstrap">Bootstrap Outfitters <small>Outdoor Gear Specialists</small></a>
                             </h4>
                             <div class="collapse show" id="bootstrap" data-parent="#accordion">
                                 <div class="card-body">
