--- a/index.html
+++ b/index.html
@@ -108,24 +108,24 @@
     <nav class="navbar navbar-expand-sm navbar-dark sticky-top">
         <div class="container">
             <a class="navbar-brand" href="#"><img src="img/logo.png" height="30" width="30" /></a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nucampNavbar">
-                <span class="navbar-toggler-icon"></span>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nucampNavbar">
+                    <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse" id="nucampNavbar">
-                    <ul class="navbar-nav">
-                        <li class="nav-item active"><a class="nav-link" href="#"><i class="fa fa-home fa-lg"></i> Home</a></li>
-                        <li class="nav-item"><a class="nav-link" href="aboutus.html"><i class="fa fa-info fa-lg"></i> About</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#"><i class="fa fa-list fa-lg"></i> Sites</a></li>
-                        <li class="nav-item"><a class="nav-link" href="contactus.html"><i class="fa fa-address-card fa-lg"></i> Contact</a></li>
-                    </ul>
-                    <span class="navbar-text ml-auto">
-                        <a role="button" data-toggle="modal" data-target="#loginModal">
-                            <i class="fa fa-sign-in"> </i> Login
-                        </a>
-                    </span>
-                </div>
+            <div class="collapse navbar-collapse" id="nucampNavbar">
+                <ul class="navbar-nav">
+                    <li class="nav-item active"><a class="nav-link" href="#"><i class="fa fa-home fa-lg"></i> Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="aboutus.html"><i class="fa fa-info fa-lg"></i> About</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#"><i class="fa fa-list fa-lg"></i> Sites</a></li>
+                    <li class="nav-item"><a class="nav-link" href="contactus.html"><i class="fa fa-address-card fa-lg"></i> Contact</a></li>
+                </ul>
+                <span class="navbar-text ml-auto">
+                    <a role="button" data-toggle="modal" data-target="#loginModal">
+                        <i class="fa fa-sign-in"> </i> Login
+                    </a>
+                </span>
             </div>
-        </nav>
+        </div>
+    </nav>
 
     <!-- Login Modal. -->
 
@@ -166,11 +166,12 @@
             </div>
         </div>
 
-    <!-- Carousel -->
-
     <div class="container">
         <div class="row row-content">
             <div class="col-md-8 mx-auto">
+
+    <!-- Carousel -->
+
                 <div id="homeCarousel" class="carousel slide" data-ride="carousel">
 
     <!-- Indicators -->
@@ -204,6 +205,9 @@
                             </div>
                         </div>
                     </div>
+
+    <!-- Controls -->
+
                     <a class="carousel-control-prev" href="#homeCarousel" role="button" data-slide="prev">
                         <span class="carousel-control-prev-icon" ></span>
                         <span class="sr-only">Previous </span>
@@ -243,7 +247,7 @@
                         <h3>React Lake Campground</h3>                
                             <p class="d-none d-sm-block">Nestled in the foothills of the Chrome Mountains, this campground on the shores of the pristine React Lake is a favorite for fly fishers.</p>
                     </div>
-                        <img class="d-flex ml-3 img-thumbnail" src="img/react-lake-thumb.jpg" alt="Picture of React Lake" />
+                    <img class="d-flex ml-3 img-thumbnail" src="img/react-lake-thumb.jpg" alt="Picture of React Lake" />
                 </div>
    			</div>
         </div>        
@@ -265,47 +269,47 @@
 
     <!--Reservation Form -->
 
-            <div id="reservation" class="row-content align-items-center">
-                <div class="col-sm-6 mx-auto">
-                    <div class="card">
-                        <h3 class="card-header bg-info text-white">Reserve a Campsite</h3>
-                        <div class="card-body">
-                            <form id="reserveForm">
-                                <div class="form-group row">
-                                    <div class="col-sm-6">
-                                        <label for="numCampers" class="col-form-label">Number of Campers</label>
-                                    </div>
-                                    <div class="col">
-                                        <select class="form-control" name="numCampers" id="numCampers">
-                                            <option selected>Select...</option>
-                                            <option value="1">1</option>
-                                            <option value="2">2</option>
-                                            <option value="3">3</option>
-                                            <option value="4">4</option>
-                                            <option value="5">5</option>
-                                            <option value="6">6</option>
-                                        </select>
-                                    </div>
+        <div id="reservation" class="row-content align-items-center">
+            <div class="col-sm-6 mx-auto">
+                <div class="card">
+                    <h3 class="card-header bg-info text-white">Reserve a Campsite</h3>
+                    <div class="card-body">
+                        <form id="reserveForm">
+                            <div class="form-group row">
+                                <div class="col-sm-6">
+                                    <label for="numCampers" class="col-form-label">Number of Campers</label>
                                 </div>
-                                <div class="form-group row">
-                                    <div class="col-sm-6">
-                                        <label for="date" class="col-form-label">Date</label>
-                                    </div>
-                                    <div class="col">
-                                        <input type="date" class="form-control" id="date" name="date" placeholder="date">
-                                    </div>
+                                <div class="col">
+                                    <select class="form-control" name="numCampers" id="numCampers">
+                                        <option selected>Select...</option>
+                                        <option value="1">1</option>
+                                        <option value="2">2</option>
+                                        <option value="3">3</option>
+                                        <option value="4">4</option>
+                                        <option value="5">5</option>
+                                        <option value="6">6</option>
+                                    </select>
                                 </div>
-                                <div class="form-group row">
-                                    <div class="col">
-                                        <button type="submit" class="btn btn-primary">Search</button>
-                                    </div>
+                            </div>
+                            <div class="form-group row">
+                                <div class="col-sm-6">
+                                    <label for="date" class="col-form-label">Date</label>
                                 </div>
-                            </form> 
-                        </div>
+                                <div class="col">
+                                    <input type="date" class="form-control" id="date" name="date" placeholder="date">
+                                </div>
+                            </div>
+                            <div class="form-group row">
+                                <div class="col">
+                                    <button type="submit" class="btn btn-primary">Search</button>
+                                </div>
+                            </div>
+                        </form> 
                     </div>
                 </div>
             </div>
         </div>
+    </div>
     
     <footer class="site-footer">
         <div class="container">
@@ -322,18 +326,18 @@
 
     <!-- Social Tags -->
 
-                    <div class="col-6 col-sm-5 text-center">
-                        <h5>Social</h5>
-                        <a class="btn btn-social-icon btn-instagram" href="http://instagram.com/"><i class="fa fa-instagram"></i></a>
-                        <a class="btn btn-social-icon btn-facebook"href="http://facebook.com/"><i class="fa fa-facebook"></i></a>
-                        <a class="btn btn-social-icon btn-twitter"href="http://twitter.com/"><i class="fa fa-twitter"></i></a>
-                        <a class="btn btn-social-icon btn-youtube"href="http://youtube.com/"><i class="fa fa-youtube"></i></a>
-                    </div>
+                <div class="col-6 col-sm-5 text-center">
+                    <h5>Social</h5>
+                    <a class="btn btn-social-icon btn-instagram" href="http://instagram.com/"><i class="fa fa-instagram"></i></a>
+                    <a class="btn btn-social-icon btn-facebook"href="http://facebook.com/"><i class="fa fa-facebook"></i></a>
+                    <a class="btn btn-social-icon btn-twitter"href="http://twitter.com/"><i class="fa fa-twitter"></i></a>
+                    <a class="btn btn-social-icon btn-youtube"href="http://youtube.com/"><i class="fa fa-youtube"></i></a>
+                </div>
                 <div class="col-sm-4">
                     <a role="button" class="btn btn-link" href="tel:+12065551234"><i class="fa fa-phone"></i> 1-206-555-1234</a><br>
             	    <a role="button" class="btn btn-link" href="mailto:campsites@nucamp.co"><i class="fa fa-envelope-o"></i> campsites@nucamp.co</a>
+                </div>
             </div>
-        </div>
         </div>
     </footer>
 
@@ -342,9 +346,7 @@
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script>
-        $("#reserveModal").modal[options];
-    </script>
+    <script>$("#reserveModal").modal[options];</script>
 </body>
 
 </html>
