--- a/index.html
+++ b/index.html
@@ -216,13 +216,9 @@
 
     <!-- Carousel Play/Pause -->
 
-                    <div class="btn-group" id="carouselButton">
-                        <button class="btn btn-danger btn-sm" id="carouselPause">
+                        <button class="btn btn-danger btn-sm" id="carouselButton">
                             <i class="fa fa-pause"></i>
-                        </button>
-                        <button class="btn btn-danger btn-sm" id="carouselPlay">
-                            <i class="fa fa-play"></i>
-                        </button>
+                        </button>                       
                     </div>
                 </div>
             </div>
@@ -312,16 +308,21 @@
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     <script>$("#reserveModal").modal[options];</script>
     
-    <!-- jQuery carousel buttons -->
+    <!-- jQuery carousel button -->
     
     <script>
         $(function() {
             $(".carousel").carousel( { interval: 2000 } );
-            $("#carouselPause").click(function(){
-                $(".carousel").carousel("pause");
-            });
-            $("#carouselPlay").click(function(){
-                $(".carousel").carousel("cycle");
+            $("#carouselButton").click(function(){
+                if ($("#carouselButton").children("i").hasClass("fa-pause")) {
+                    $(".carousel").carousel("pause");
+                    $("#carouselButton").children("i").removeClass("fa-pause");
+                    $("#carouselButton").children("i").addClass("fa-play");
+                }   else {
+                    $(".carousel").carousel("cycle");
+                    $("#carouselButton").children("i").removeClass("fa-play");
+                    $("#carouselButton").children("i").addClass("fa-pause");
+                }
             });
         });
     </script>
