--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <!-- Reserve Button. -->
 
                 <div class="col-md-4 col-xl-2 col-xs-12">
-                    <a class="btn btn-info btn-lg mt-4" role="button" data-toggle="modal" data-target="#reserveModal">Reserve Campsite</a>
+                    <a class="btn btn-info btn-lg mt-4" role="button" id="reserveButton">Reserve Campsite</a>
                 </div>
             </div>
         </div>
@@ -45,7 +45,7 @@
     <div id="reserveModal" class="modal fade">
         <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
             <div class="modal-content">
-                <div class="modal-header bg-info">
+                <div class="modal-header">
                     <h3 class="modal-title bg-info text-white">Reserve a Campsite</h3>
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
                 </div>
@@ -115,7 +115,7 @@
                     <li class="nav-item"><a class="nav-link" href="contactus.html"><i class="fa fa-address-card fa-lg"></i> Contact</a></li>
                 </ul>
                 <span class="navbar-text ml-auto">
-                    <a role="button" data-toggle="modal" data-target="#loginModal">
+                    <a role="button" id="loginButton">
                         <i class="fa fa-sign-in"> </i> Login
                     </a>
                 </span>
